--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -20,5 +20,10 @@
         <url-pattern>*.xhtml</url-pattern>
     </servlet-mapping>
     
+    <!-- Carregamento do Hibernate -->
+    <listener>
+    	<display-name>HibernateContexto</display-name>
+    	<listener-class>br.com.matheus.drogaria.util.HibernateContexto</listener-class>
+    </listener>
    
 </web-app>
